--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ ul {
   margin-right: 50px;
 }
 
-.header-link:not(last-child) {
+.header-link:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -186,7 +186,7 @@ ul {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
-.footer-item:not(last-child) {
+.footer-item:not(:last-child) {
   display: block;
   margin-bottom: 9px;
 }
@@ -309,7 +309,7 @@ ul {
 .methods-list {
   display: flex;
 }
-.methods-box:not(last-child) {
+.methods-box:not(:last-child) {
   max-width: 270px;
   margin-right: 30px;
 }
@@ -352,7 +352,7 @@ ul {
 .work-list {
   display: flex;
 }
-.work-item:not(last-child) {
+.work-item:not(:last-child) {
   padding-right: 30px;
 }
 
@@ -366,7 +366,7 @@ ul {
 .team-list {
   display: flex;
 }
-.team-box:not(last-child) {
+.team-box:not(:last-child) {
   margin-right: 30px;
 }
 .team-box {
@@ -451,7 +451,7 @@ ul {
   display: flex;
 }
 
-.clients-box:not(last-child) {
+.clients-box:not(:last-child) {
   margin-right: 30px;
   border-color: var(--clients-box);
   box-sizing: border-box;
@@ -545,7 +545,7 @@ ul {
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
-.portfolio-txt:not(first-child) {
+.portfolio-txt:not(:first-child) {
   margin-bottom: 4px;
 }
 .portfolio-box-bottom-part {
