--- a/style.css
+++ b/style.css
@@ -163,7 +163,19 @@ ul {
   color: var(--color-add);
 }
 .current {
+  position: relative;
   color: var(--color-add);
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--bg-accent-color);
 }
 
 /* ===FOOTER=== */
