--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ ul {
   margin-right: 50px;
 }
 
-.header-link:not(:last-child) {
+.header-item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -163,19 +163,7 @@ ul {
   color: var(--color-add);
 }
 .current {
-  position: relative;
   color: var(--color-add);
-}
-
-.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--bg-accent-color);
 }
 
 /* ===FOOTER=== */
